# frames

./: ChangeLog.md  MiniFrame.hs  README.md  miniframe.cabal  reinstall  tempCodeRunnerFile.hs
docs/: MiniFrame-Frames.html  MiniFrame-Relational.html  MiniFrame.html  doc-index.html  index.html  miniframe.haddock
src/: Colors.hs  Main.hs  MiniFrame.hs  Miniframe.hs  Optimize.hs  Parse.hs  ParseCSV.hs  PrettyPrint.hs  Relational.hs  Table.hs  Util.hs  test.csv
src/miniframe/: Frames.hs  Optimize.hs  Parse.hs  PrettyPrint.hs  Relational.hs  Util.hs
test/: Spec.hs  Test.hs
