cabal-version:         2.2
name:                  miniframe
category:              Data manipulation
version:               0
license:               GNU General Public License v3.0
license-file:          LICENSE.md
author:                David Oniani
maintainer:            David Oniani <davidoniani@gmail.com>
stability:             experimental
homepage:              http://github.com/oniani/miniframe/
bug-reports:           http://github.com/oniani/miniframe/issues
copyright:             Copyright (C) 2018 David Oniani
synopsis:              Minimal data frames with relational algebra.
description:           Manipulation of small datasets in the tabular format.
build-type:            Simple
extra-source-files:    README.md

library
  exposed-modules:     MiniFrame, ParseCSV, Colors
  build-depends:       base,
                       split,
                       parsec,
                       ansi-terminal
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       miniframe,
                       QuickCheck
