cabal-version:         2.2
name:                  miniframe
category:              Data
version:               1.0
license:               GPL-3.0-only
license-file:          LICENSE.md
author:                David Oniani
maintainer:            David Oniani <onianidavid@gmail.com>
stability:             experimental
homepage:              http://github.com/oniani/miniframe/
bug-reports:           http://github.com/oniani/miniframe/issues
copyright:             Copyright (C) 2018 David Oniani
synopsis:              Minimal data frames with relational algebra
description:           Manipulation of small datasets in the tabular format
build-type:            Simple
extra-source-files:    README.md, ChangeLog.md

library
  exposed-modules:     Miniframe, Optimize, Parse, PrettyPrint, Relational
  build-depends:       base, containers, vector, bytestring, cassava, ansi-terminal, boxes
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, miniframe, QuickCheck, derive, generic-random
